GPUShader compile error message and textures not appearing in Texture mode when set to GLSL #41596

Closed
opened 2014-08-26 21:51:39 +02:00 by Emolga · 28 comments
Emolga commented 2014-08-26 21:51:39 +02:00 (Migrated from localhost:3001)

System Information
Windows 7 Home Premium 64 bit w/Sp1; ATI Radeon HD 4200

Blender Version

Broken: 2.71.5 e2c412f (example: 2.69.7 4b206af, see splash screen)

Short description of error
When a texture is added to an object it doesn't appear in Texture Mode when shading is set to GLSL, and errors appear in the command line.

Screenshot_2.71_build.png

command.PNG

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Open the file and the error will appear in the command line. It also appears if a texture is added to an object in Texture mode.
houses.blend

**System Information** Windows 7 Home Premium 64 bit w/Sp1; ATI Radeon HD 4200 **Blender Version** Broken: 2.71.5 e2c412f (example: 2.69.7 4b206af, see splash screen) **Short description of error** When a texture is added to an object it doesn't appear in Texture Mode when shading is set to GLSL, and errors appear in the command line. ![Screenshot_2.71_build.png](https://archive.blender.org/developer/F106910/Screenshot_2.71_build.png) ![command.PNG](https://archive.blender.org/developer/F106912/command.PNG) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open the file and the error will appear in the command line. It also appears if a texture is added to an object in Texture mode. [houses.blend](https://archive.blender.org/developer/F106909/houses.blend)
Emolga commented 2014-08-26 21:51:39 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Emolga commented 2014-08-26 21:51:39 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Emolga

Added subscriber: @Emolga

Added subscriber: @xrg

Added subscriber: @xrg

I have the same issue on Arch Linux 64-bit, ATI Radeon HD 7660, with Open Source drivers. Error message with -d flag . Blender 2.71 GLSL works fine.

Windows 8.1 on the same machine doesn't have the problem at all, oddly enough.

I have the same issue on Arch Linux 64-bit, ATI Radeon HD 7660, with Open Source drivers. [Error message with -d flag ](http://www.pasteall.org/53662). Blender 2.71 GLSL works fine. Windows 8.1 on the same machine doesn't have the problem at all, oddly enough.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Can we see your system_info file? generate it from Help menu ->system info and then open a text editor and browse for the file at the drop down menu in the footer.

Can we see your system_info file? generate it from Help menu ->system info and then open a text editor and browse for the file at the drop down menu in the footer.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@Emolga can you confirm if 2.71 works for you too?

@Emolga can you confirm if 2.71 works for you too?
Emolga commented 2014-08-27 14:56:59 +02:00 (Migrated from localhost:3001)
Author

Here's my system info file.

Also 2.71 works.

system-info.txt

Here's my system info file. Also 2.71 works. [system-info.txt](https://archive.blender.org/developer/F106995/system-info.txt)

There's little here that looks suspicious.

@Emolga, could you try running blender from the command line by opening a command line, changing to the blender directory and with running the program with "blender -d" like @xrg does above? It would help to know if your error is the same.

Also is that the latest available driver you are using?

The weird thing is that the error @xrg posted makes no sense because the error message is contradicted by the code :/

There's little here that looks suspicious. @Emolga, could you try running blender from the command line by opening a command line, changing to the blender directory and with running the program with "blender -d" like @xrg does above? It would help to know if your error is the same. Also is that the latest available driver you are using? The weird thing is that the error @xrg posted makes no sense because the error message is contradicted by the code :/
Emolga commented 2014-08-27 17:06:22 +02:00 (Migrated from localhost:3001)
Author

Here's what I got from running from the command line with "blender -d"

command.txt

And I updated my drivers are up to date.

Here's what I got from running from the command line with "blender -d" [command.txt](https://archive.blender.org/developer/F107022/command.txt) And I updated my drivers are up to date.

Just added debug information for shader limits in OpenGL in 85945a8 . It should help us debug the error better. @Emolga, from you I'd like to get a build from builder.blender.org tomorrow and regenerate system_info.txt . I suspect we may be hitting some implementation limit here (unlikely, but may happen). If I see nothing suspicious I'll try disabling the clipping workaround and see if that helps.

Just added debug information for shader limits in OpenGL in 85945a8 . It should help us debug the error better. @Emolga, from you I'd like to get a build from builder.blender.org tomorrow and regenerate system_info.txt . I suspect we may be hitting some implementation limit here (unlikely, but may happen). If I see nothing suspicious I'll try disabling the clipping workaround and see if that helps.
Emolga commented 2014-08-28 13:33:08 +02:00 (Migrated from localhost:3001)
Author

Here is the system info file.

system-info.txt

Here is the system info file. [system-info.txt](https://archive.blender.org/developer/F107135/system-info.txt)

Hi,

Thanks, but the current builds won't include that commit. Builds are done per day, usually at night, so you have to wait for a day to get an updated build with that commit (that's why I asked for a test with a build tomorrow). For reference, here's how a good file should look like ("good" means you should get an extra "Implementation Dependent OpenGL Limits" section at the end of the file. system-info.txt)

Hi, Thanks, but the current builds won't include that commit. Builds are done per day, usually at night, so you have to wait for a day to get an updated build with that commit (that's why I asked for a test with a build tomorrow). For reference, here's how a good file should look like ("good" means you should get an extra "Implementation Dependent OpenGL Limits" section at the end of the file. [system-info.txt](https://archive.blender.org/developer/F107138/system-info.txt))

Added subscriber: @tynkatopi

Added subscriber: @tynkatopi

Same errors here, Win7_64bit, Blender v.blender-2.71-6891f1c-win64.zip

Same errors here, Win7_64bit, Blender v.blender-2.71-6891f1c-win64.zip

System-Info for me (built from source).

Edit: I checked a LiveCD of Ubuntu and it has the issue there as well (so it doesn't seem to be a configuration problem on my part). What a bizarre bug.

[System-Info ](http://www.pasteall.org/53707) for me (built from source). Edit: I checked a LiveCD of Ubuntu and it has the issue there as well (so it doesn't seem to be a configuration problem on my part). What a bizarre bug.

@xrg tested on firepro - windows 7 at institute and can't reproduce :/. Shader limits are the same so it must be something else. I see you compile from source, would you be able to test a patch from me, see if the issue is resolved with it?

@xrg tested on firepro - windows 7 at institute and can't reproduce :/. Shader limits are the same so it must be something else. I see you compile from source, would you be able to test a patch from me, see if the issue is resolved with it?

Sure, that shouldn't be a problem.

Sure, that shouldn't be a problem.

This will disable a recent workaround that I added to ATI cards to support clipping, let's see if that makes things better. clip_workaround.patch
Thanks for the help!

This will disable a recent workaround that I added to ATI cards to support clipping, let's see if that makes things better. [clip_workaround.patch](https://archive.blender.org/developer/F107293/clip_workaround.patch) Thanks for the help!

Ah, that patch fixes it here. Very nice. :)

Ah, that patch fixes it here. Very nice. :)

@xrg,Can you try this one too {F107304}? I hope this works because the previous patch disables this fix #40981.

@xrg,Can you try this one too {[F107304](https://archive.blender.org/developer/F107304/clip_workaround.patch)}? I hope this works because the previous patch disables this fix #40981.

Seems you solved it (well at least on Linux). That patch fixes this issue, and clipping border with matcaps works.

Seems you solved it (well at least on Linux). That patch fixes this issue, and clipping border with matcaps works.
Author

This issue was referenced by 78b79a91f2

This issue was referenced by 78b79a91f2aea012c6ba9181ac3c32aeb66d392c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 78b79a91f2.

Closed by commit 78b79a91f2.
Emolga commented 2014-08-29 17:17:25 +02:00 (Migrated from localhost:3001)
Author

Here's my system info file.

system-info.txt

Here's my system info file. [system-info.txt](https://archive.blender.org/developer/F107317/system-info.txt)

@Emolga @Psy-Fi fixed that in master already. So it should be working for you (try a recent build in builder.blender.org after the specified hash)

@Emolga @Psy-Fi fixed that in master already. So it should be working for you (try a recent build in builder.blender.org after the specified hash)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41596
No description provided.